(js) Fix clipping issue with chosen widget
Fixes #2865
Fixes #2873

--- a/html/pfappserver/root/static/scss/_chosen.scss
+++ b/html/pfappserver/root/static/scss/_chosen.scss
@@ -554,3 +554,14 @@ This file is generated by `grunt build`, do not edit it by hand.
 }
 
 /* @end */
+
+/* @group Chosen fix */
+.chosen-container .chosen-drop.fixed {
+  position: fixed;
+  display: none;
+}
+
+.chosen-container.chosen-with-drop .chosen-drop.fixed {
+  display: block;
+}
+/* @end */
